--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
+# requirements.txt
 streamlit==1.34.0
 predicthq==3.4.0
 requests==2.31.0
 streamlit-searchbox==0.1.11
-googlemaps==4.10.0
-
 groq
+
+# Added for the OpenStreetMap (Nominatim) client
+geopy
+
+# Added for data handling (CSVs, DataFrames)
+pandas
+
+# Added for map rendering
+pydeck
+
+# Added for timezone handling
+pytz
+
+# Added for parsing dates
+python-dateutil
